# Media-Tagger

./: .gitignore  Cargo.toml  README.md  rules.sample.yml
src/: main.rs  rename_files.rs  rule.rs  scrape_data.rs
