[package]
name = "media_tagger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
csv = "1.4.0"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
scraper = "0.24.0"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
walkdir = "2.5.0"
